cabal-version:      2.4
name:               gigaparsley-fuzzing
version:            0.1.0.0
synopsis:           Bachelors thesis project: Fuzzing for Gigaparsec

license:            NONE
author:             Oliver Madine
maintainer:         30090176+OliverMadine@users.noreply.github.com

extra-source-files:
    README.md

test-suite gigaparsley-fuzzing-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      tasty >=1.1 && <1.6,
                      tasty-hunit >=0.9 && <0.11,
